# vitruv

./: .gitignore  .gitmessage  CITATION.cff  CONTRIBUTING.md  README.md  TODO  environment.yml  pyproject.toml  vitruv.code-workspace
.github/ISSUE_TEMPLATE/: general.yml
.github/workflows/: ci.yml  publish-noarch.yml  release.yml
conda.recipe/: meta.yaml
config/dictionaries/: project.txt  python.txt  tools.txt
config/tools/: black.toml  mypy.ini  pylintrc.ini  pylintrc_tests.ini  pyrightconfig.json  releaserc.toml
docs/: Makefile  conf.py  index.md  proposal.md
docs/adr/: adr-template.md
docs/api/: index.md
docs/audits/: audit-component.md  audit-interaction.md  audit-model.md
docs/design/: audit-taxonomy.md
docs/guide/: cli-reference.md  configuration.md  getting-started.md  installation.md  usage.md
docs/internals/: audit-taxonomy.md  interaction-principles.md  modeling-principles.md
docs/standards/: design-principles.md
src/package_name/: __init__.py  cli.py  module_name.py
src/vitruv/: __main__.py
tests/: conftest.py
